istio/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule

metadata:
  name: api
  namespace: istio-demo

spec:
  host: api-stable

  subsets:
    - name: stable
      labels:
        version: v1

    - name: canary
      labels:
        version: v2
